--- a/Editor/DOTSAnimation.Editor.asmdef
+++ b/Editor/DOTSAnimation.Editor.asmdef
@@ -1,4 +1,18 @@
 {
-	"name": "DOTSAnimation.Editor",
-	"references":[ "GUID:c39b61f68344c5e46ad36a286c992104" ]
+    "name": "DOTSAnimation.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:c39b61f68344c5e46ad36a286c992104"
+    ],
+    "includePlatforms": [
+        "Editor"
+    ],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
